--- a/M7/css/M7.css
+++ b/M7/css/M7.css
@@ -20,10 +20,15 @@
   font-size: 2.2em;
   letter-spacing: 0.3em;
   color: #3d3d3d !important; }
-  .type-M7 .section-title .text-primary {
-    color: #c4a37d !important; }
-.type-M7 .contacts .fade-title-right {
-  left: 100%; }
+.type-M7 .text-primary {
+  color: #c4a37d !important; }
+  .type-M7 .contacts .fade-title-right {
+    left: 90%; }
+.type-M7 .row-field {
+  margin-left: -5px;
+  margin-right: -5px; }
+.type-M7 .col-field {
+  padding: 0 5px; }
 .type-M7 .fade-title-left, .type-M7 .fade-title-right {
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
@@ -61,3 +66,156 @@
   -webkit-transition: all 0.15s;
   -o-transition: all 0.15s;
   transition: all 0.15s; }
+.type-M7 textarea.form-control {
+  height: 6.87em;
+  padding-top: 1.1em;
+  resize: none; }
+  .type-M7 .form-control:focus {
+    border-color: #c5a47e;
+    background-color: #fff;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+.type-M7 .form-group {
+  margin-bottom: 10px; }
+  .type-M7 .form-control::-moz-placeholder {
+    color: #666666;
+    opacity: 1; }
+  .type-M7 .form-control:-ms-input-placeholder {
+    color: #666666; }
+  .type-M7 .form-control::-webkit-input-placeholder {
+    color: #666666; }
+.type-M7 .sscf-form {
+  font-size: 1.15em;
+  position: relative; }
+.type-M7 .fl_wrap_textarea {
+  height: 290px; }
+  .type-M7 .sscf-form .fl_label {
+    top: 23px;
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 0;
+    font-weight: normal;
+    height: 0px;
+    left: 14px;
+    color: #8c8c8c;
+    font-size: 15px;
+    -webkit-transform-origin: 0px -35px 0px;
+    -moz-transform-origin: 0px -35px 0px;
+    transform-origin: 0px -35px 0px;
+    position: absolute;
+    pointer-events: none;
+    z-index: 3;
+    -webkit-transition: all 120ms;
+    -moz-transition: all 120ms;
+    transition: all 120ms; }
+.type-M7 .sscf-form .sscf-input {
+  color: #777;
+  border: 1px solid #eaeaea;
+  padding: 20px 14px 5px;
+  line-height: inherit;
+  width: 100%;
+  background-color: #f7f7f7;
+  margin-bottom: 30px;
+  border-radius: 0;
+  height: auto;
+  -webkit-appearance: none;
+  text-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: border ease 0.238s;
+  -moz-transition: border ease 0.238s;
+  transition: border ease 0.238s; }
+.type-M7 input:focus, .type-M7 textarea:focus {
+  border-color: #969696 !important;
+  box-shadow: none !important; }
+.type-M7 .sscf-error {
+  font-family: Helvetica, Arial, sans-serif;
+  display: block;
+  position: absolute;
+  line-height: 0;
+  margin: 0;
+  height: 0;
+  padding: 0 !important;
+  font-size: 10px !important;
+  z-index: 90;
+  margin-top: 12px;
+  right: 15px;
+  color: #dc0000;
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.3s ease; }
+  .type-M7 .sscf-valid-error .sscf-error {
+    opacity: 1; }
+.type-M7 .sscf-error.sscf-email-error {
+  opacity: 0; }
+  .type-M7 .sscf-email-valid-error .sscf-error.sscf-email-error {
+    opacity: 1; }
+.type-M7 .sscf-input.error {
+  border-color: #dc0000 !important; }
+.type-M7 .sscf-footer {
+  opacity: 0.8;
+  margin: 10px 0 15px; }
+  .type-M7 .sscf-footer p {
+    margin: 0; }
+.type-M7 .sscf-form .fl_wrap {
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+.type-M7 .btn {
+  font-family: 'montserratsemibold';
+  position: relative;
+  display: inline-block;
+  border: 0.2em solid #c5a47e;
+  border-radius: 30px;
+  padding: 14px 36px;
+  font-size: 0.875em;
+  color: #fff;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #c5a47e;
+  border: 0;
+  -webkit-transition: all 0.3s ease-out !important;
+  transition: all 0.3s ease-out !important; }
+  .type-M7 .btn:hover, .type-M7 .btnfocus {
+    color: #fff;
+    background-color: #cc9f6b;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: none !important; }
+.type-M7 .btn-shadow-1 {
+  box-shadow: 0 15px 34px rgba(0, 0, 0, 0.18); }
+.type-M7 .btn-shadow-2 {
+  box-shadow: 0 15px 34px rgba(197, 164, 126, 0.5); }
+.type-M7 .footer {
+  text-align: center;
+  margin: 7.1em 0 5.5em;
+  font-size: 12px;
+  color: #aaa; }
+  .type-M7 .footer .brand {
+    margin-top: -0.45em;
+    font-size: 3.4em; }
+  .type-M7 .footer .brand {
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 4vmin;
+    line-height: 1;
+    color: #3d3d3d; }
+    .type-M7 .footer .brand:hover {
+      color: #3d3d3d;
+      text-decoration: none; }
+    .type-M7 .footer .brand:focus {
+      color: #3d3d3d;
+      text-decoration: none; }
+.type-M7 .author-link {
+  font-family: 'Montserrat', sans-serif;
+  color: #d0d0d0; }
+  .type-M7 .author-link:hover {
+    text-decoration: none; }
