--- a/M7/sass/M7.scss
+++ b/M7/sass/M7.scss
@@ -39,16 +39,22 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	font-size: 2.2em;
   	letter-spacing: 0.3em;
   	color: $color-get !important;
-    .text-primary{
-      color: $color-txt-pri !important;
-    }
   }
-
+  .text-primary{
+    color: $color-txt-pri !important;
+  }
   //contact(fade)
   .contacts {
   	.fade-title-right {
-  		left: 100%;
+  		left: 90%;
   	}
+  }
+  .row-field {
+  	margin-left: -5px;
+  	margin-right: -5px;
+  }
+  .col-field {
+  	padding: 0 5px;
   }
   .fade-title-left,
   .fade-title-right {
@@ -97,10 +103,218 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	-o-transition: all .15s;
   	transition: all .15s;
   }
+  textarea.form-control {
+  	height: 6.87em;
+  	padding-top: 1.1em;
+  	resize: none;
+  }
+  .form-control {
+  	&:focus {
+  		border-color: #c5a47e;
+  		background-color: #fff;
+  		outline: 0;
+  		-webkit-box-shadow: none;
+  		box-shadow: none;
+  	}
+  }
+  .form-group{
+    margin-bottom: 10px;
+  }
+  //form-placeholder
+  .form-control {
+  	&::-moz-placeholder {
+  		color: #666666;
+  		opacity: 1;
+  	}
+  	&:-ms-input-placeholder {
+  		color: #666666;
+  	}
+  	&::-webkit-input-placeholder {
+  		color: #666666;
+  	}
+  }
+  .sscf-form {
+    font-size: 1.15em;
+    position: $position-re;
+  }
+  .fl_wrap_textarea {
+    height: 290px;
+  }
+  .sscf-form {
+  	.fl_label {
+  		top: 23px;
+  		font-family: Helvetica, Arial, sans-serif;
+  		line-height: 0;
+  		font-weight: normal;
+  		height: 0px;
+  		left: 14px;
+  		color: #8c8c8c;
+  		font-size: 15px;
+  		-webkit-transform-origin: 0px -35px 0px;
+  		-moz-transform-origin: 0px -35px 0px;
+  		transform-origin: 0px -35px 0px;
+  		position: absolute;
+  		pointer-events: none;
+  		z-index: 3;
+  		-webkit-transition: all 120ms;
+  		-moz-transition: all 120ms;
+  		transition: all 120ms;
+  	}
+  }
+  .sscf-form {
+  	.sscf-input {
+  		color: #777;
+  		border: 1px solid #eaeaea;
+  		padding: 20px 14px 5px;
+  		line-height: inherit;
+  		width: 100%;
+  		background-color: #f7f7f7;
+  		margin-bottom: 30px;
+  		border-radius: 0;
+  		height: auto;
+  		-webkit-appearance: none;
+  		text-shadow: none;
+  		-webkit-box-shadow: none;
+  		-moz-box-shadow: none;
+  		box-shadow: none;
+  		-webkit-box-sizing: border-box;
+  		-moz-box-sizing: border-box;
+  		box-sizing: border-box;
+  		-webkit-transition: border ease .238s;
+  		-moz-transition: border ease .238s;
+  		transition: border ease .238s;
+  	}
+  }
+  input, textarea {
+  	&:focus {
+  		border-color: #969696 !important;
+  		box-shadow: none !important;
+  	}
+  }
+  //error
+  .sscf-error {
+  	font-family: Helvetica, Arial, sans-serif;
+  	display: block;
+  	position: absolute;
+  	line-height: 0;
+  	margin: 0;
+  	height: 0;
+  	padding: 0 !important;
+  	font-size: 10px !important;
+  	z-index: 90;
+  	margin-top: 12px;
+  	right: 15px;
+  	color: #dc0000;
+  	pointer-events: none;
+  	opacity: 0;
+  	transition: all 0.3s ease;
+  }
+  .sscf-valid-error {
+  	.sscf-error {
+  		opacity: 1;
+  	}
+  }
+  .sscf-error.sscf-email-error {
+  	opacity: 0;
+  }
+  .sscf-email-valid-error {
+  	.sscf-error.sscf-email-error {
+  		opacity: 1;
+  	}
+  }
+  .sscf-input.error {
+  	border-color: #dc0000 !important;
+  }
 
+  //section-header-footer
+  .sscf-footer {
+  	opacity: 0.8;
+  	margin: 10px 0 15px;
+  	p {
+  		margin: 0;
+  	}
+  }
+  .sscf-form {
+  	.fl_wrap {
+  		display: block;
+  		position: relative;
+  		-webkit-box-sizing: border-box;
+  		-moz-box-sizing: border-box;
+  		box-sizing: border-box;
+  	}
+  }
 
+  //button
+  .btn {
+  	font-family: 'montserratsemibold';
+  	position: relative;
+  	display: inline-block;
+  	border: 0.2em solid #c5a47e;
+  	border-radius: 30px;
+  	padding: 14px 36px;
+  	font-size: 0.875em;
+  	color: #fff;
+  	letter-spacing: 0.15em;
+  	text-transform: uppercase;
+  	text-decoration: none;
+  	background-color: #c5a47e;
+  	border: 0;
+  	-webkit-transition: all .3s ease-out !important;
+  	transition: all .3s ease-out !important;
+  }
+  .btn {
+  	&:hover, &focus {
+  		color: #fff;
+  		background-color: #cc9f6b;
+  		-webkit-box-shadow: none;
+  		box-shadow: none;
+  		outline: none !important;
+  	}
+  }
+  .btn-shadow-1 {
+  	box-shadow: 0 15px 34px rgba(0,0,0,0.18);
+  }
+  .btn-shadow-2 {
+  	box-shadow: 0 15px 34px rgba(197,164,126,0.5);
+  }
 
+  //footer
+  .footer {
+  	text-align: center;
+  	margin: 7.1em 0 5.5em;
+  	font-size: 12px;
+  	color: #aaa;
+  }
+  .footer {
+  	.brand {
+  		margin-top: -0.45em;
+  		font-size: 3.4em;
+  	}
+    .brand {
+    	display: inline-block;
+    	font-family: 'Montserrat', sans-serif;
+    	font-weight: 700;
+    	font-size: 4vmin;
+    	line-height: 1;
+    	color: #3d3d3d;
+    	&:hover {
+    		color: #3d3d3d;
+    		text-decoration: none;
+    	}
+    	&:focus {
+    		color: #3d3d3d;
+    		text-decoration: none;
+    	}
+    }
+  }
 
+  .author-link {
+  	font-family: 'Montserrat', sans-serif;
+  	color: #d0d0d0;
+  	&:hover {
+  		text-decoration: none;
+  	}
+  }
 
 
 }
