--- a/M16/css/M16.css
+++ b/M16/css/M16.css
@@ -5,19 +5,19 @@
   color: inherit;
   text-decoration: none; }
 .type-M16 a {
-  color: #c5a47e;
+  color: #c4a37d;
   -webkit-transition: color 0.3s ease-out;
   -o-transition: color 0.3s ease-out;
   transition: color 0.3s ease-out; }
   .type-M16 a:hover, .type-M16 afocus {
-    color: #c5a47e;
+    color: #c4a37d;
     outline: none;
     text-decoration: none; }
 .type-M16 .blog {
   position: relative;
   margin-bottom: 3em;
   margin-right: 1px;
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0 1px 15px rgba(0, 0, 0, 0.08); }
 .type-M16 .blog-thumbnail {
   padding-right: 15px;
@@ -33,18 +33,18 @@
     margin-top: 1.7em;
     padding-top: 1.7em;
     font-size: 0.88em;
-    color: #b4b4b4;
+    color: #b5b5b5;
     overflow: hidden; }
     .type-M16 .blog-info .blog-meta .author {
       float: left; }
       .type-M16 .blog-info .blog-meta .author a {
         font-family: 'montserratsemibold';
-        color: #b4b4b4;
+        color: #b5b5b5;
         font-size: 14px;
         line-height: 24px; }
         .type-M16 .blog-info .blog-meta .author a:hover {
           text-decoration: none;
-          color: #c5a47e; }
+          color: #c4a37d; }
     .type-M16 .blog-info .blog-meta .time {
       float: right; }
 .type-M16 .blog-tags {
@@ -64,9 +64,9 @@
     -webkit-transition: all 0.2s;
     transition: all 0.2s; }
     .type-M16 .blog-tags a:hover {
-      background-color: #c5a47e;
+      background-color: #c4a37d;
       text-decoration: none;
-      color: #fff; }
+      color: white; }
 .type-M16 .blog-title {
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
@@ -111,40 +111,40 @@
       border-radius: 100px;
       text-decoration: none; }
       .type-M16 .blog-pagination li a:hover {
-        color: #fff;
-        background-color: #c5a47e;
+        color: white;
+        background-color: #c4a37d;
         text-decoration: none; }
       .type-M16 .blog-pagination li a i {
         font-size: 16px; }
   .type-M16 .blog-pagination > .disabled > a {
-    color: #fff;
-    background-color: #c5a47e;
+    color: white;
+    background-color: #c4a37d;
     cursor: default; }
     .type-M16 .blog-pagination > .disabled > a:hover {
-      color: #fff;
-      background-color: #c5a47e;
+      color: white;
+      background-color: #c4a37d;
       cursor: default; }
 .type-M16 .blog-pagination > .active > a {
-  color: #fff;
-  background-color: #c5a47e;
+  color: white;
+  background-color: #c4a37d;
   cursor: default; }
   .type-M16 .blog-pagination > .active > a:focus {
-    color: #fff;
-    background-color: #c5a47e;
+    color: white;
+    background-color: #c4a37d;
     cursor: default; }
   .type-M16 .blog-pagination > .active > a:hover {
-    color: #fff;
-    background-color: #c5a47e;
+    color: white;
+    background-color: #c4a37d;
     cursor: default; }
 .type-M16 .blog-pagination > .active > span {
-  color: #fff;
-  background-color: #c5a47e;
+  color: white;
+  background-color: #c4a37d;
   cursor: default; }
   .type-M16 .blog-pagination > .active > span:focus {
-    color: #fff;
-    background-color: #c5a47e;
+    color: white;
+    background-color: #c4a37d;
     cursor: default; }
   .type-M16 .blog-pagination > .active > span:hover {
-    color: #fff;
-    background-color: #c5a47e;
+    color: white;
+    background-color: #c4a37d;
     cursor: default; }
