--- a/M7/sass/M7.scss
+++ b/M7/sass/M7.scss
@@ -1,9 +1,15 @@
 $position-re: relative;
 $position-ab: absolute;
 $font-fml: 'Oswald', sans-serif;
+$font-fml-mont: 'Montserrat', sans-serif;
 //color
 $color-black: rgb(0%, 0%, 0%);
+$color-white: rgb(100%, 100%, 100%);
 $color-address: rgb(45%, 45%, 45%);
+$color-error: rgb(86%, 0%, 0%);
+//color-fomr
+$color-form: rgb(40%, 40%, 40%);
+$color-bg-form: rgb(95%, 95%, 95%);
 //color section-title
 $color-get: rgb(24%, 24%, 24%);
 $color-txt-pri: rgb(77%, 64%, 49%);
@@ -93,9 +99,9 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	height: 3.1em;
   	border-radius: 0.75em;
   	padding-left: 22px;
-  	color: #666666;
-  	background-color: #f3f3f3;
-  	border: 1px solid #f3f3f3;
+  	color: $color-form;
+  	background-color: $color-bg-form;
+  	border: 1px solid $color-bg-form;
   	-webkit-box-shadow: none;
   	box-shadow: none;
   	-webkit-appearance: none;
@@ -110,8 +116,8 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   }
   .form-control {
   	&:focus {
-  		border-color: #c5a47e;
-  		background-color: #fff;
+  		border-color: $color-txt-pri;
+  		background-color: $color-white;
   		outline: 0;
   		-webkit-box-shadow: none;
   		box-shadow: none;
@@ -123,14 +129,14 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   //form-placeholder
   .form-control {
   	&::-moz-placeholder {
-  		color: #666666;
+  		color: $color-form;
   		opacity: 1;
   	}
   	&:-ms-input-placeholder {
-  		color: #666666;
+  		color: $color-form;
   	}
   	&::-webkit-input-placeholder {
-  		color: #666666;
+  		color: $color-form;
   	}
   }
   .sscf-form {
@@ -204,7 +210,7 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	z-index: 90;
   	margin-top: 12px;
   	right: 15px;
-  	color: #dc0000;
+  	color: $color-error;
   	pointer-events: none;
   	opacity: 0;
   	transition: all 0.3s ease;
@@ -223,7 +229,7 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	}
   }
   .sscf-input.error {
-  	border-color: #dc0000 !important;
+  	border-color: $color-error !important;
   }
 
   //section-header-footer
@@ -249,22 +255,22 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	font-family: 'montserratsemibold';
   	position: relative;
   	display: inline-block;
-  	border: 0.2em solid #c5a47e;
+  	border: 0.2em solid $color-txt-pri;
   	border-radius: 30px;
   	padding: 14px 36px;
   	font-size: 0.875em;
-  	color: #fff;
+  	color: $color-white;
   	letter-spacing: 0.15em;
   	text-transform: uppercase;
   	text-decoration: none;
-  	background-color: #c5a47e;
+  	background-color: $color-txt-pri;
   	border: 0;
   	-webkit-transition: all .3s ease-out !important;
   	transition: all .3s ease-out !important;
   }
   .btn {
   	&:hover, &focus {
-  		color: #fff;
+  		color: $color-white;
   		background-color: #cc9f6b;
   		-webkit-box-shadow: none;
   		box-shadow: none;
@@ -292,24 +298,24 @@ $color-txt-pri: rgb(77%, 64%, 49%);
   	}
     .brand {
     	display: inline-block;
-    	font-family: 'Montserrat', sans-serif;
+    	font-family: $font-fml-mont;
     	font-weight: 700;
     	font-size: 4vmin;
     	line-height: 1;
-    	color: #3d3d3d;
+    	color: $color-get;
     	&:hover {
-    		color: #3d3d3d;
+    		color: $color-get;
     		text-decoration: none;
     	}
     	&:focus {
-    		color: #3d3d3d;
+    		color: $color-get;
     		text-decoration: none;
     	}
     }
   }
 
   .author-link {
-  	font-family: 'Montserrat', sans-serif;
+  	font-family: $font-fml-mont;
   	color: #d0d0d0;
   	&:hover {
   		text-decoration: none;
